# merchant_point

./: .gitignore  README.md  controller.py  docker-compose.yml  mc_command  routing.py  utils.py
app/: init_data.py  migrations.py  point.py  points.py
db/: manager.py
merchant/: pyproject.toml  settings.py  utils.py
merchant/app/: init_data.py  migrations.py  point.py
merchant/db/: manager.py
merchant/src/: dump.sql
src/: clients.csv  init_conf.sh  nifi_config.xml
